Edit swagger desc and fix som problems
